<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white001">

    <include
        android:id="@+id/topbar"
        layout="@layout/general_topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="16dp"
        android:layout_below="@+id/topbar"
        android:id="@+id/tv_old_mobile"
        android:text="@string/old_mobile_mind"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:textColor="#888888"
        android:gravity="center"
        app:layout_textSizePercent="5%w"
        app:layout_paddingRightPercent = "6.67%w"
        app:layout_paddingLeftPercent = "6.67%w"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/v_line1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_1"
        android:layout_below="@id/tv_old_mobile"
        android:background="@color/gray002"
        app:layout_marginTopPercent="9.3%w"/>

    <com.zhy.android.percent.support.PercentRelativeLayout
        android:id="@+id/rl_inputPhoneNum"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/v_line1"
        android:background="@color/white"
        app:layout_heightPercent="13.33%w">

        <EditText
            android:id="@+id/tv_inputPhoneNum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="请输入手机号码"
            android:gravity="center_vertical"
            android:textColorHint="@color/gray003"
            app:layout_marginLeftPercent="6.67%w"
            app:layout_textSizePercent="4.17%w"/>
    </com.zhy.android.percent.support.PercentRelativeLayout>

    <View
        android:id="@+id/v_line2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_1"
        android:layout_below="@id/rl_inputPhoneNum"
        android:background="@color/gray002"/>

    <com.zhy.android.percent.support.PercentRelativeLayout
        android:id="@+id/rl_confirmPwd_input"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/v_line2"
        android:background="@color/white"
        app:layout_heightPercent="13.33%w">

        <TextView
            android:id="@+id/tv_get_verificationCode"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/green001"
            android:gravity="center"
            android:text="@string/confirm_pwd_obtain"
            android:textColor="@color/white"
            app:layout_heightPercent="7.5%w"
            app:layout_marginRightPercent="4.03%w"
            app:layout_textSizePercent="3.61%w"
            app:layout_widthPercent="21.39%w"/>

        <EditText
            android:id="@+id/et_moblie_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/tv_get_verificationCode"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/confirm_pwd_input"
            android:inputType="number"
            android:singleLine="true"
            android:textColorHint="@color/gray003"
            app:layout_marginLeftPercent="6.67%w"
            app:layout_textSizePercent="4.17%w"/>
    </com.zhy.android.percent.support.PercentRelativeLayout>

    <View
        android:id="@+id/v_line3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_1"
        android:layout_below="@id/rl_confirmPwd_input"
        android:background="@color/gray002"/>

    <TextView
        android:id="@+id/tv_next_step"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/v_line3"
        android:background="@drawable/bg_rectangle_green"
        android:gravity="center"
        android:text="@string/next_step"
        android:textColor="@color/white"
        app:layout_heightPercent="11.94%w"
        app:layout_marginLeftPercent="4.03%w"
        app:layout_marginRightPercent="4.03%w"
        app:layout_marginTopPercent="5.28%w"
        app:layout_textSizePercent="4.17%w"/>
    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/tv_next_step"
        android:background="@drawable/bg_rectangle_green"
        android:gravity="center"
        android:text="@string/skip"
        android:visibility="gone"
        android:textColor="@color/white"
        app:layout_heightPercent="11.94%w"
        app:layout_marginLeftPercent="4.03%w"
        app:layout_marginRightPercent="4.03%w"
        app:layout_marginTopPercent="5.28%w"
        app:layout_textSizePercent="4.17%w"/>
</com.zhy.android.percent.support.PercentRelativeLayout>