<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                       xmlns:app="http://schemas.android.com/apk/res-auto"
                                                       android:layout_width="match_parent"
                                                       android:layout_height="match_parent"
                                                       android:background="@color/white001">

    <include
        android:id="@+id/topbar"
        layout="@layout/general_topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/v_line1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_1"
        android:layout_below="@id/topbar"
        android:background="@color/gray002"
        app:layout_marginTopPercent="4.03%w"/>

    <com.zhy.android.percent.support.PercentRelativeLayout
        android:id="@+id/rl_government"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/v_line1"
        android:background="@color/white"
        app:layout_heightPercent="13.33%w">

        <View
            android:id="@+id/v_arrow_government"
            android:layout_width="12.5dp"
            android:layout_height="21dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/icon_arrow_right_type2"
            app:layout_heightPercent="5.83%w"
            app:layout_marginRightPercent="4.03%w"
            app:layout_widthPercent="3.48%w"/>

        <TextView
            android:id="@+id/tv_choose_stage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/v_arrow_government"
            android:gravity="center_vertical"
            android:hint="@string/stage_chooose"
            android:textColorHint="@color/gray003"
            app:layout_marginRightPercent="2.64%w"
            app:layout_textSizePercent="4.17%w"/>

        <TextView
            android:id="@+id/tv_government"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/government_confirm"
            android:textColor="@color/black"
            app:layout_marginLeftPercent="4.03%w"
            app:layout_textSizePercent="4.17%w"/>
    </com.zhy.android.percent.support.PercentRelativeLayout>

    <View
        android:id="@+id/v_line2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_1"
        android:layout_below="@id/rl_government"
        android:background="@color/gray002"/>

    <View
        android:id="@+id/v_line3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_1"
        android:layout_below="@id/v_line2"
        android:background="@color/gray002"
        app:layout_marginTopPercent="4.03%w"/>

    <com.zhy.android.percent.support.PercentRelativeLayout
        android:id="@+id/rl_province_city_eve"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/v_line3"
        android:background="@color/white"
        app:layout_heightPercent="13.33%w">

        <TextView
            android:id="@+id/tv_province_city_eve"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/province_city_eve"
            android:textColor="@color/black"
            app:layout_marginLeftPercent="4.03%w"
            app:layout_textSizePercent="4.17%w"/>

        <View
            android:id="@+id/v_arrow"
            android:layout_width="12.5dp"
            android:layout_height="21dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/icon_arrow_right_type2"
            app:layout_heightPercent="5.83%w"
            app:layout_marginRightPercent="4.03%w"
            app:layout_widthPercent="3.48%w"/>

        <TextView
            android:id="@+id/tv_choose"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/v_arrow"
            android:gravity="center_vertical"
            android:hint="@string/city_chooose"
            android:textColorHint="@color/gray003"
            app:layout_marginRightPercent="2.64%w"
            app:layout_textSizePercent="4.17%w"/>
    </com.zhy.android.percent.support.PercentRelativeLayout>

    <View
        android:id="@+id/v_line4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_1"
        android:layout_below="@id/rl_province_city_eve"
        android:background="@color/gray002"/>

    <TextView
        android:id="@+id/tv_complete"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/v_line4"
        android:background="@drawable/bg_rectangle_green"
        android:gravity="center"
        android:text="@string/complete"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_heightPercent="11.94%w"
        app:layout_marginLeftPercent="4.03%w"
        app:layout_marginRightPercent="4.03%w"
        app:layout_marginTopPercent="5.28%w"
        app:layout_textSizePercent="4.17%w"/>
</com.zhy.android.percent.support.PercentRelativeLayout>